--- a/client/app/views/video-nav.html
+++ b/client/app/views/video-nav.html
@@ -1,4 +1,5 @@
 <ul class="nav nav-tabs">
+  <li role="presentation" ng-class="{active: viewVideo}"><a ng-href="/#/videos">Videos</a></li>
   <li role="presentation" ng-class="{active: viewVideo}"><a ng-href="/#/video/{{ video._id }}">View</a></li>
   <li role="presentation" ng-class="{active: editVideo}"><a ng-href="/#/video/{{ video._id }}/edit">Edit</a></li>
 </ul>
