--- a/client/app/views/video-view.html
+++ b/client/app/views/video-view.html
@@ -1,3 +1,3 @@
 <ng-include src="'views/video-nav.html'"></ng-include>
 <h3>{{ video.title }}</h3>
-<p>{{ video.url }}</p>
+<youtube src="video.url"></youtube>
